Changed site name
Changed to Teaching portfolio
Added tags for each subsite:
- intro to marine data
- intro to GIS
- intro to R for biologists

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Introductory analysis of marine ecological data in R"
+  title: "Matic Jančič: Teaching portfolio"
   navbar:
     right:
       - about.qmd
